--- a/MusicClient/WebContent/assets/css/style4.css
+++ b/MusicClient/WebContent/assets/css/style4.css
@@ -547,7 +547,7 @@ ul.nav li a span {
     padding: 9px 0 0;
     width: 40px;
     height: 42px;
-    margin: 0.75em 0 0 2em;
+    margin: 0.75em 0 0 1em;
     text-align: center;
     cursor: pointer;
     float: left;
@@ -2209,7 +2209,7 @@ li.list-group-item1 {
     font-weight: normal;
     background: none;
     border: 1px solid #E6E4E4;
-    color: #D2D1D1;
+    color: black;
     outline: none;
     font-size: 14px;
     margin-top: 11px;
@@ -4514,5 +4514,57 @@ text-decoration:none;
     right: 32px;
     top: -13px;
 	}
+}
+input[type=search]
+{
+	width:250px !important;
+margin-top:15px;
+}
+.suggestions-list {
+	position: absolute;
+list-style-type: none;
+
+padding: 0;
+overflow: auto;
+
+
+}
+
+.suggestions-list li {
+	color: #000000;
+padding: 6px 12px;
+cursor: pointer;
+background: #f9f9f9;
+border-bottom: 1px solid #eeeeee;
+width: 250px;
+text-align: left;
+
+
+}
+
+.suggestions-list li:hover {
+	background: #eeeeee;
+}
+
+.suggestions-list li:active, .suggestions-list li.active {
+	color: #FFFFFF;
+	background: #0099FF;
+	width: 200px;
+}
+
+.suggestions-list:focus {
+	outline: none;
+}
+.list-wrapper input[type="text"] {
+	width: 680px;
+	height: 50px;
+	outline: none;
+	padding: 0px 10px;
+	margin: 0px auto;
+	display: block;
+}
+
+.list-wrapper ul {
+	text-align: center;
 }
 /***responsive***/
